# Project_D-32-Rep

./: Project_D-32-Rep.sln
Project-D-32/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
Project-D-32/VectorEngine/: alphabet.h  icons.h  include_vector.h  layers.h  render.h  roman_numbers.h  shapes.h  start_screen.h  vector_engine.cpp  vector_engine.h  vector_engine_settings.h
Project-D-32/VectorEngine/UI/: UI_Objects.h  canvas.h
Project-D-32/main/: CMakeLists.txt  data_and_settings.cpp  data_and_settings.h  idf_component.yml  include.h  main.cpp  server.cpp  server.h  server_hw_driver.cpp  server_hw_driver.h  server_logic.cpp  server_logic.h  wi-fi_apsta.c  wi-fi_apsta.h
Project-D-32/spiffs/: index.html
WebApplication1/: DB_connection.cs  Program.cs
